Added features including automatic login

--- a/pages/options.html
+++ b/pages/options.html
@@ -67,6 +67,19 @@
             Confirmer la déconnexion:
             <input type="checkbox" id="confirmDisconnect" class="option">
         </label>
+        <br>
+        <label>
+            Connection automatique:
+            <input type="checkbox" id="autoLogin" class="option">
+            <br>
+            Code usager à utiliser pour la connection automatique:
+            <input type="text" id="loginUser" class="option">
+            <br>
+            Mote de passe à utiliser pour la connection automatique:
+            <input type="password" id="loginPassword" class="option">
+            <br>
+            <span class="info">Toutes les informations sont stockées localement.</span>
+        </label>
     </div>
     <div id="export" class="TabContent">
         <label>
