Added option to color unread emails

--- a/pages/options.html
+++ b/pages/options.html
@@ -64,6 +64,13 @@
     </div>
     <div id="qol" class="TabContent">
         <label>
+            Colorer les courriels non lus:
+            <input type="checkbox" id="colorUnreadEmails" class="option">
+            Couleur:
+            <input type="color" id="unreadEmailColor" class="option">
+        </label>
+        <br>
+        <label>
             Confirmer la déconnexion:
             <input type="checkbox" id="confirmDisconnect" class="option">
         </label>
@@ -72,13 +79,15 @@
             Connection automatique:
             <input type="checkbox" id="autoLogin" class="option">
             <br>
-            Code usager à utiliser pour la connection automatique:
+            &emsp;Code usager à utiliser pour la connection automatique:
             <input type="text" id="loginUser" class="option">
             <br>
-            Mote de passe à utiliser pour la connection automatique:
+            &emsp;Mot de passe à utiliser pour la connection automatique:
             <input type="password" id="loginPassword" class="option">
             <br>
-            <span class="info">Toutes les informations sont stockées localement.</span>
+            <span class="info">
+                &emsp;Toutes les informations sont stockées localement.
+            </span>
         </label>
     </div>
     <div id="export" class="TabContent">
