--- a/pages/options.html
+++ b/pages/options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Paramètres SDEC Extras</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 <body>
     <div class="OptionsTab">
@@ -121,14 +121,6 @@
         </label>
         <br>
         <label>
-            Activer la modification de résultats:
-            <input type="checkbox" id="editResults" class="option">
-            <span class="info">
-                &emsp;Cela n'affecte les résultats que frontalement.
-            </span>
-        </label>
-        <br>
-        <label>
             Connection automatique:
             <input type="checkbox" id="autoLogin" class="option">
             <br>
@@ -155,7 +147,6 @@
 
     <div id="status" class="OptionsStatus"></div>
     <button id="save">Sauvegarder</button>
-
-    <script src="/scripts/options.js"></script>
+    <script type="text/javascript" src="/scripts/options.js"></script>
 </body>
 </html>
