Fixed issue where web_accessible_resources weren't accessible.

--- a/pages/options.html
+++ b/pages/options.html
@@ -103,7 +103,7 @@
         </label>
         <br>
         <label>
-            Activer les jeux:
+            Activer les jeux (WIP):
             <input type="checkbox" id="games" class="option">
         </label>
     </div>
@@ -147,6 +147,8 @@
 
     <div id="status" class="OptionsStatus"></div>
     <button id="save">Sauvegarder</button>
+    <br>
+    <label>© Édouard Chevrette 2025</label>
     <script type="text/javascript" src="/scripts/options.js"></script>
 </body>
 </html>
