Fixed flappy, again

--- a/pages/flappy.html
+++ b/pages/flappy.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <div class="background"></div>
-    <img class="bird" src="/images/icon-128.png" alt="bird-img">
-    <div class="message">
+    <img class="bird" src="/images/icon-128.png" alt="bird">
+    <div class="title">
         Touchez ou appuyez sur entrée pour débuter
     </div>
     <div class="score">
         <span class="score_title"></span>
-        <span class="score_val"></span>
+        <span class="score_value"></span>
     </div>
     <script src="/scripts/flappy.js"></script>
 </body>
