--- a/pages/options.html
+++ b/pages/options.html
@@ -124,7 +124,7 @@
             Activer la modification de résultats:
             <input type="checkbox" id="editResults" class="option">
             <span class="info">
-                &emsp;Cela n'affecte les résultats que frontalement.
+                &emsp;N'affecte pas réellement les résultats.
             </span>
         </label>
         <br>
