--- a/pages/options.html
+++ b/pages/options.html
@@ -149,6 +149,7 @@
     <button id="save">Sauvegarder</button>
     <br>
     <label>© Édouard Chevrette 2025</label>
+    <a href="https://github.com/Edstorm17/SDECExtrasV2/?tab=readme-ov-file#politique-de-confidentialit%C3%A9"></a>
     <script type="text/javascript" src="/scripts/options.js"></script>
 </body>
 </html>
