--- a/pages/options.html
+++ b/pages/options.html
@@ -148,8 +148,8 @@
     <div id="status" class="OptionsStatus"></div>
     <button id="save">Sauvegarder</button>
     <br>
-    <label>© Édouard Chevrette 2025</label>
-    <a href="https://github.com/Edstorm17/SDECExtrasV2/?tab=readme-ov-file#politique-de-confidentialit%C3%A9"></a>
+    <label>© Édouard Chevrette 2025 </label>
+    <a href="https://github.com/Edstorm17/SDECExtrasV2/?tab=readme-ov-file#politique-de-confidentialit%C3%A9">Politique de confidentialité</a>
     <script type="text/javascript" src="/scripts/options.js"></script>
 </body>
 </html>
