--- a/pages/flappy.html
+++ b/pages/flappy.html
@@ -3,17 +3,22 @@
 <head>
     <title>Flappy</title>
     <link rel="stylesheet" href="/styles/flappy.css">
+    <script src="/assets/js/socket.io.min.js"></script>
     <meta charset="UTF-8">
 </head>
 <body>
     <div class="background"></div>
-    <img class="bird" src="/images/icon-128.png" alt="bird">
-    <div class="title">
-        Touchez ou appuyez sur entrée pour débuter
-    </div>
+    <div class="title"></div>
     <div class="score">
         <span class="score_title"></span>
         <span class="score_value"></span>
+    </div>
+    <div class="mainMenu">
+        <button id="singleplayer">Solo</button>
+        <button id="multiplayer">Multijoueur</button>
+    </div>
+    <div class="multiplayerMenu" style="display: none">
+        <button id="createGame">Créer une partie</button>
     </div>
     <script src="/scripts/flappy.js"></script>
 </body>
