--- a/pages/flappy.html
+++ b/pages/flappy.html
@@ -3,7 +3,7 @@
 <head>
     <title>Flappy</title>
     <link rel="stylesheet" href="/styles/flappy.css">
-    <script src="/assets/js/socket.io.min.js"></script>
+    <script src="/assets/socket.io.min.js"></script>
     <meta charset="UTF-8">
 </head>
 <body>
@@ -19,6 +19,8 @@
     </div>
     <div class="multiplayerMenu" style="display: none">
         <button id="createGame">Créer une partie</button>
+        <div class="currentGames">
+        </div>
     </div>
     <script src="/scripts/flappy.js"></script>
 </body>
